tests/negative/neg_own_observe_requires_access.safe
-- Test: neg_own_observe_requires_access
-- Description: Local observe must use the .Access attribute.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4.p101a:ef2d8fd1
-- Expected: REJECT observe_requires_access

package Observe_Requires_Access_Test

   type Config is record
      Rate : Natural;


   type Config_Ptr is access Config;

   function Bad_Observe
      Owner    : Config_Ptr = new ((Rate = 100) as Config);
      Observer : access constant Config = Owner;  -- ERROR: must use Owner.Access


